--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <div class="hero">
     <img 
-      src="/01012428887.jpg" 
+      src="01012428887.jpg" 
       alt="Chisato Moritaka" 
       class="hero-img"
     />
@@ -28,7 +28,7 @@
       Chisato Moritaka es una cantante, compositora y multiinstrumentista japonesa,
       conocida por su estilo único y su influencia en la música pop japonesa de los 90.
     </p>
-    <img src="/chisatokof.jpg" alt="Chisato Moritaka" />
+    <img src="chisatokof.jpg" alt="Chisato Moritaka" />
   </section>
 
   <section class="video-section" id="videos">
